--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <div class="sidebar">
         <div class="logo-area">
-            <img src="https://i.postimg.cc/HxNY0y19/placeholder-logo.png" alt="Logo PBI" class="logo-img" id="companyLogo">
+            <img src="https://i.postimg.cc/gkTFBHdt/Logo-PBI.png" alt="Logo PBI" class="logo-img" id="companyLogo">
             <h3 style="font-size:16px;">PBI S.A.S. ESP</h3>
             <p style="font-size:11px; opacity:0.7;">Sistema Integrado de Gestión</p>
         </div>
